postgres_tests/copyselect/expected.txt

-----------
QUERY:
--
-- Test cases for COPY (select) TO
--
create table test1 (id serial, t text);
RESULT:
	[]

-----------
QUERY:

insert into test1 (t) values ('a');
RESULT:
	[]

-----------
QUERY:

insert into test1 (t) values ('b');
RESULT:
	[]

-----------
QUERY:

insert into test1 (t) values ('c');
RESULT:
	[]

-----------
QUERY:

insert into test1 (t) values ('d');
RESULT:
	[]

-----------
QUERY:

insert into test1 (t) values ('e');
RESULT:
	[]

-----------
QUERY:


create table test2 (id serial, t text);
RESULT:
	[]

-----------
QUERY:

insert into test2 (t) values ('A');
RESULT:
	[]

-----------
QUERY:

insert into test2 (t) values ('B');
RESULT:
	[]

-----------
QUERY:

insert into test2 (t) values ('C');
RESULT:
	[]

-----------
QUERY:

insert into test2 (t) values ('D');
RESULT:
	[]

-----------
QUERY:

insert into test2 (t) values ('E');
RESULT:
	[]

-----------
QUERY:


create view v_test1
as select 'v_'||t from test1;
RESULT:
	[]

-----------
QUERY:


--
-- Test COPY table TO
--
copy test1 to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- This should fail
--
copy v_test1 to stdout;
RESULT:
	ERROR - cannot copy from view "v_test1"
HINT:  Try the COPY (SELECT ...) TO variant.


-----------
QUERY:

--
-- Test COPY (select) TO
--
copy (select t from test1 where id=1) to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- Test COPY (select for update) TO
--
copy (select t from test1 where id=3 for update) to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- This should fail
--
copy (select t into temp test3 from test1 where id=3) to stdout;
RESULT:
	ERROR - COPY (SELECT INTO) is not supported


-----------
QUERY:

--
-- This should fail
--
copy (select * from test1) from stdin;
RESULT:
	ERROR - syntax error at or near "from"
LINE 5: copy (select * from test1) from stdin;
                                   ^


-----------
QUERY:

--
-- This should fail
--
copy (select * from test1) (t,id) to stdout;
RESULT:
	ERROR - syntax error at or near "("
LINE 5: copy (select * from test1) (t,id) to stdout;
                                   ^


-----------
QUERY:

--
-- Test JOIN
--
copy (select * from test1 join test2 using (id)) to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- Test UNION SELECT
--
copy (select t from test1 where id = 1 UNION select * from v_test1 ORDER BY 1) to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- Test subselect
--
copy (select * from (select t from test1 where id = 1 UNION select * from v_test1 ORDER BY 1) t1) to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- Test headers, CSV and quotes
--
copy (select t from test1 where id = 1) to stdout csv header force quote t;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

--
-- Test psql builtins, plain table
--
-- \copy test1 to stdout
--
-- This should fail
--
-- \copy v_test1 to stdout
--
-- Test \copy (select ...)
--
-- \copy (select /* REPLACED */ ''id/* REPLACED */ '',/* REPLACED */ ''id/* REPLACED */ '',/* REPLACED */ ''id/* REPLACED */ ''/* REPLACED */ ''/* REPLACED */ ''||t,(id + 1)*id,t,/* REPLACED */ ''test1/* REPLACED */ ''./* REPLACED */ ''t/* REPLACED */ '' from test1 where id=3) to stdout
--
-- Drop everything
--
drop table test2;
RESULT:
	[]

-----------
QUERY:

drop view v_test1;
RESULT:
	[]

-----------
QUERY:

drop table test1;
RESULT:
	[]

-----------
QUERY:


-- psql handling of COPY in multi-command strings
copy (select 1) to stdout\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 4: copy (select 1) to stdout\;
                                 ^


-----------
QUERY:
 select 1/0;
RESULT:
	ERROR - division by zero


-----------
QUERY:
	-- row, then error
select 1/0\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 2: select 1/0\;
                  ^


-----------
QUERY:
 copy (select 1) to stdout;
RESULT:
	ERROR - can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:
 -- error only
copy (select 1) to stdout\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 2: copy (select 1) to stdout\;
                                 ^


-----------
QUERY:
 copy (select 2) to stdout\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 1:  copy (select 2) to stdout\;
                                  ^


-----------
QUERY:
 select 3\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 1:  select 3\;
                 ^


-----------
QUERY:
 select 4;
RESULT:
	[(4,)]

-----------
QUERY:
 -- 1 2 3 4

create table test3 (c int);
RESULT:
	[]

-----------
QUERY:

select 0\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 2: select 0\;
                ^


-----------
QUERY:
 copy test3 from stdin\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 1:  copy test3 from stdin\;
                              ^


-----------
QUERY:
 copy test3 from stdin\;
RESULT:
	ERROR - syntax error at or near "\"
LINE 1:  copy test3 from stdin\;
                              ^


-----------
QUERY:
 select 1;
RESULT:
	[(1,)]

-----------
QUERY:
 -- 0 1
1
-- \.
2
-- \.
select * from test3;
RESULT:
	ERROR - syntax error at or near "1"
LINE 2: 1
        ^


-----------
QUERY:

drop table test3;
RESULT:
	[]
